--- a/countingvalleys/pom.xml
+++ b/countingvalleys/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>stockmerchant</artifactId>
+    <artifactId>countingvalleys</artifactId>
 
-    <name>stockmerchant</name>
+    <name>countingvalleys</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
