--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>bigfactorial</module>
         <module>sockmerchant</module>
         <module>countingvalleys</module>
+        <module>jumpingontheclouds</module>
     </modules>
 
     <properties>
