updated directory structure

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>countingvalleys</module>
         <module>jumpingontheclouds</module>
         <module>repeatedstring</module>
+        <module>largestpalindromicsubstring</module>
     </modules>
 
     <properties>
